added jump binds

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -3,4 +3,5 @@ alias "+ta" "-attack; -attack2";
 alias "-jt" "-jump";
 bind v "+jt;+ta;" 
 alias +qsw "slot3";alias -qsw "lastinv"; bind q +qsw 
+bind mwheelup +jump; bind mwheeldown +jump; bind space +jump
 host_writeconfig
